Fixed overflow issue issue in message box. Fixed textarea issue where it wouldn't clear.

--- a/client/app.css
+++ b/client/app.css
@@ -93,9 +93,11 @@
 .messages-container {
   background-color: var(--mc-grass);
   height: 84vh;
+  overflow-y: scroll;
   display: flex;
   flex-direction: column;
   justify-content: end;
+  
 }
 
 .message-box {
